unpackaged/main/default/objects/OrderItem/fields/CPID__c.field-meta.xml
<CustomField>
    <fullName>CPID__c</fullName>
    <label>CPID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>