unpackaged/main/default/objects/OrderItem/fields/Exchanged_from_ROLI__c.field-meta.xml
<CustomField>
    <fullName>Exchanged_from_ROLI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this Order Item is the result of an &quot;Exchange Order&quot; after a Return Order : indicates the original ROLI (Return Order Line Item)</inlineHelpText>
    <label>Exchanged from ROLI</label>
    <referenceTo>ReturnOrderLineItem</referenceTo>
    <relationshipLabel>Exchanged to Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>