unpackaged/main/default/objects/OrderItem/fields/gift__c.field-meta.xml
<CustomField>
    <fullName>gift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift wrapping</label>
    <type>Checkbox</type>
</CustomField>