unpackaged/main/default/objects/OrderItem/fields/giftMessage__c.field-meta.xml
<CustomField>
    <fullName>giftMessage__c</fullName>
    <label>Gift Message</label>
    <type>TextArea</type>
</CustomField>