unpackaged/main/default/objects/OrderItem/fields/hasGiftMessage__c.field-meta.xml
<CustomField>
    <fullName>hasGiftMessage__c</fullName>
    <label>Gift Message</label>
    <type>TextArea</type>
</CustomField>