unpackaged/main/default/objects/OrderItem/fields/hsCodeDescription__c.field-meta.xml
<CustomField>
    <fullName>hsCodeDescription__c</fullName>
    <formula>Product2.hsCodeDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HsCode Description</label>
    <type>Text</type>
</CustomField>