unpackaged/main/default/objects/OrderItem/fields/IsPreOrder__c.field-meta.xml
<CustomField>
    <fullName>IsPreOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PreOrder</label>
    <type>Checkbox</type>
</CustomField>