unpackaged/main/default/objects/OrderItem/fields/parentCPID__c.field-meta.xml
<CustomField>
    <fullName>parentCPID__c</fullName>
    <label>ParentCPID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>