unpackaged/main/default/objects/OrderItem/fields/PreOrder_message__c.field-meta.xml
<CustomField>
    <fullName>PreOrder_message__c</fullName>
    <label>PreOrder message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>