unpackaged/main/default/objects/OrderItem/fields/preparationFlags__c.field-meta.xml
<CustomField>
    <fullName>preparationFlags__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Preparation Flags</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>